# buff-price-sentinel

./: .dockerignore  .gitignore  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  get_qq_openid.py  pyproject.toml
.github/workflows/: ci.yml
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-14-buff-price-sentinel/: design.md  implement.md  prd.md  task.json
.trellis/workspace/Anyu/: index.md  journal-1.md
config/: app.example.yaml  items.example.yaml  llm.example.yaml  notifiers.example.yaml
src/buff_sentinel/: __init__.py  __main__.py  cli.py  logging_setup.py
src/buff_sentinel/analytics/: __init__.py  rules.py  trends.py
src/buff_sentinel/buff/: __init__.py  client.py
src/buff_sentinel/config/: __init__.py  loader.py  schema.py
src/buff_sentinel/llm/: __init__.py  client.py
src/buff_sentinel/notifier/: __init__.py  formatter.py  qq.py
src/buff_sentinel/service/: __init__.py  pipeline.py  scheduler.py
src/buff_sentinel/storage/: __init__.py  database.py  models.py  repository.py
tests/: conftest.py  test_analytics.py  test_buff_client.py  test_cli.py  test_config.py  test_llm.py  test_notifier.py  test_pipeline.py  test_storage.py
